--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -6,7 +6,9 @@
    "id": "735a5fb5-2faf-42cd-ab41-ee8551ece789",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
