--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -7,7 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   }
  ],
