--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "735a5fb5-2faf-42cd-ab41-ee8551ece789",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,164 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "23783a47-9ea4-4853-b28d-5886faa17dc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data-export (1).csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c2e896bf-37bd-4492-bfc2-4d6390bcd277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th># ----------------------------------------</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Session primary channel group (Default channel...</td>\n",
+       "      <td>Date + hour (YYYYMMDDHH)</td>\n",
+       "      <td>Users</td>\n",
+       "      <td>Sessions</td>\n",
+       "      <td>Engaged sessions</td>\n",
+       "      <td>Average engagement time per session</td>\n",
+       "      <td>Engaged sessions per user</td>\n",
+       "      <td>Events per session</td>\n",
+       "      <td>Engagement rate</td>\n",
+       "      <td>Event count</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024041623</td>\n",
+       "      <td>237</td>\n",
+       "      <td>300</td>\n",
+       "      <td>144</td>\n",
+       "      <td>47.526666666666700</td>\n",
+       "      <td>0.6075949367088610</td>\n",
+       "      <td>4.673333333333330</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041719</td>\n",
+       "      <td>208</td>\n",
+       "      <td>267</td>\n",
+       "      <td>132</td>\n",
+       "      <td>32.09737827715360</td>\n",
+       "      <td>0.6346153846153850</td>\n",
+       "      <td>4.295880149812730</td>\n",
+       "      <td>0.4943820224719100</td>\n",
+       "      <td>1147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024041723</td>\n",
+       "      <td>188</td>\n",
+       "      <td>233</td>\n",
+       "      <td>115</td>\n",
+       "      <td>39.93991416309010</td>\n",
+       "      <td>0.6117021276595740</td>\n",
+       "      <td>4.587982832618030</td>\n",
+       "      <td>0.49356223175965700</td>\n",
+       "      <td>1069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041718</td>\n",
+       "      <td>187</td>\n",
+       "      <td>256</td>\n",
+       "      <td>125</td>\n",
+       "      <td>32.16015625</td>\n",
+       "      <td>0.6684491978609630</td>\n",
+       "      <td>4.078125</td>\n",
+       "      <td>0.48828125</td>\n",
+       "      <td>1044</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          # ----------------------------------------  \\\n",
+       "0  Session primary channel group (Default channel...   \n",
+       "1                                             Direct   \n",
+       "2                                     Organic Social   \n",
+       "3                                             Direct   \n",
+       "4                                     Organic Social   \n",
+       "\n",
+       "                 Unnamed: 1 Unnamed: 2 Unnamed: 3        Unnamed: 4  \\\n",
+       "0  Date + hour (YYYYMMDDHH)      Users   Sessions  Engaged sessions   \n",
+       "1                2024041623        237        300               144   \n",
+       "2                2024041719        208        267               132   \n",
+       "3                2024041723        188        233               115   \n",
+       "4                2024041718        187        256               125   \n",
+       "\n",
+       "                            Unnamed: 5                 Unnamed: 6  \\\n",
+       "0  Average engagement time per session  Engaged sessions per user   \n",
+       "1                   47.526666666666700         0.6075949367088610   \n",
+       "2                    32.09737827715360         0.6346153846153850   \n",
+       "3                    39.93991416309010         0.6117021276595740   \n",
+       "4                          32.16015625         0.6684491978609630   \n",
+       "\n",
+       "           Unnamed: 7           Unnamed: 8   Unnamed: 9  \n",
+       "0  Events per session      Engagement rate  Event count  \n",
+       "1   4.673333333333330                 0.48         1402  \n",
+       "2   4.295880149812730   0.4943820224719100         1147  \n",
+       "3   4.587982832618030  0.49356223175965700         1069  \n",
+       "4            4.078125           0.48828125         1044  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
