Unnamed row removed

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -170,6 +170,16 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "315491ed-5f17-4151-a413-8b66d725ab8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df"
+   ]
   }
  ],
  "metadata": {
