Table columns named changed

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -173,151 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "315491ed-5f17-4151-a413-8b66d725ab8d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Session primary channel group (Default channel group)</th>\n",
-       "      <th>Date + hour (YYYYMMDDHH)</th>\n",
-       "      <th>Users</th>\n",
-       "      <th>Sessions</th>\n",
-       "      <th>Engaged sessions</th>\n",
-       "      <th>Average engagement time per session</th>\n",
-       "      <th>Engaged sessions per user</th>\n",
-       "      <th>Events per session</th>\n",
-       "      <th>Engagement rate</th>\n",
-       "      <th>Event count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Session primary channel group (Default channel...</td>\n",
-       "      <td>Date + hour (YYYYMMDDHH)</td>\n",
-       "      <td>Users</td>\n",
-       "      <td>Sessions</td>\n",
-       "      <td>Engaged sessions</td>\n",
-       "      <td>Average engagement time per session</td>\n",
-       "      <td>Engaged sessions per user</td>\n",
-       "      <td>Events per session</td>\n",
-       "      <td>Engagement rate</td>\n",
-       "      <td>Event count</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Direct</td>\n",
-       "      <td>2024041623</td>\n",
-       "      <td>237</td>\n",
-       "      <td>300</td>\n",
-       "      <td>144</td>\n",
-       "      <td>47.526666666666700</td>\n",
-       "      <td>0.6075949367088610</td>\n",
-       "      <td>4.673333333333330</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>1402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>2024041719</td>\n",
-       "      <td>208</td>\n",
-       "      <td>267</td>\n",
-       "      <td>132</td>\n",
-       "      <td>32.09737827715360</td>\n",
-       "      <td>0.6346153846153850</td>\n",
-       "      <td>4.295880149812730</td>\n",
-       "      <td>0.4943820224719100</td>\n",
-       "      <td>1147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Direct</td>\n",
-       "      <td>2024041723</td>\n",
-       "      <td>188</td>\n",
-       "      <td>233</td>\n",
-       "      <td>115</td>\n",
-       "      <td>39.93991416309010</td>\n",
-       "      <td>0.6117021276595740</td>\n",
-       "      <td>4.587982832618030</td>\n",
-       "      <td>0.49356223175965700</td>\n",
-       "      <td>1069</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>2024041718</td>\n",
-       "      <td>187</td>\n",
-       "      <td>256</td>\n",
-       "      <td>125</td>\n",
-       "      <td>32.16015625</td>\n",
-       "      <td>0.6684491978609630</td>\n",
-       "      <td>4.078125</td>\n",
-       "      <td>0.48828125</td>\n",
-       "      <td>1044</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0 Session primary channel group (Default channel group)  \\\n",
-       "0  Session primary channel group (Default channel...      \n",
-       "1                                             Direct      \n",
-       "2                                     Organic Social      \n",
-       "3                                             Direct      \n",
-       "4                                     Organic Social      \n",
-       "\n",
-       "0  Date + hour (YYYYMMDDHH)  Users  Sessions  Engaged sessions  \\\n",
-       "0  Date + hour (YYYYMMDDHH)  Users  Sessions  Engaged sessions   \n",
-       "1                2024041623    237       300               144   \n",
-       "2                2024041719    208       267               132   \n",
-       "3                2024041723    188       233               115   \n",
-       "4                2024041718    187       256               125   \n",
-       "\n",
-       "0  Average engagement time per session  Engaged sessions per user  \\\n",
-       "0  Average engagement time per session  Engaged sessions per user   \n",
-       "1                   47.526666666666700         0.6075949367088610   \n",
-       "2                    32.09737827715360         0.6346153846153850   \n",
-       "3                    39.93991416309010         0.6117021276595740   \n",
-       "4                          32.16015625         0.6684491978609630   \n",
-       "\n",
-       "0  Events per session      Engagement rate  Event count  \n",
-       "0  Events per session      Engagement rate  Event count  \n",
-       "1   4.673333333333330                 0.48         1402  \n",
-       "2   4.295880149812730   0.4943820224719100         1147  \n",
-       "3   4.587982832618030  0.49356223175965700         1069  \n",
-       "4            4.078125           0.48828125         1044  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.columns = df.iloc[0]\n",
-    "df = df.drop[index=0"
+    "df = df.drop(index=0).reset_index(drop=True)\n",
+    "df.columns=[\"channel group\",\"DateHour\",\"Users\",\"Sessions\tEngaged sessions\tAverage engagement time per session\tEngaged sessions per user\tEvents per session\tEngagement rate\tEvent count"
    ]
   }
  ],
