Tables datatypes details shown

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -15,10 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "23783a47-9ea4-4853-b28d-5886faa17dc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata-export (1).csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"data-export (1).csv\")"
    ]
@@ -173,14 +185,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "315491ed-5f17-4151-a413-8b66d725ab8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>channel group</th>\n",
+       "      <th>DateHour</th>\n",
+       "      <th>Users</th>\n",
+       "      <th>Sessions</th>\n",
+       "      <th>Engaged sessions</th>\n",
+       "      <th>Average engagement time per session</th>\n",
+       "      <th>Engaged sessions per user</th>\n",
+       "      <th>Events per session</th>\n",
+       "      <th>Engagement rate</th>\n",
+       "      <th>Event count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024041723</td>\n",
+       "      <td>188</td>\n",
+       "      <td>233</td>\n",
+       "      <td>115</td>\n",
+       "      <td>39.93991416309010</td>\n",
+       "      <td>0.6117021276595740</td>\n",
+       "      <td>4.587982832618030</td>\n",
+       "      <td>0.49356223175965700</td>\n",
+       "      <td>1069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041718</td>\n",
+       "      <td>187</td>\n",
+       "      <td>256</td>\n",
+       "      <td>125</td>\n",
+       "      <td>32.16015625</td>\n",
+       "      <td>0.6684491978609630</td>\n",
+       "      <td>4.078125</td>\n",
+       "      <td>0.48828125</td>\n",
+       "      <td>1044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041720</td>\n",
+       "      <td>175</td>\n",
+       "      <td>221</td>\n",
+       "      <td>112</td>\n",
+       "      <td>46.918552036199100</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>4.529411764705880</td>\n",
+       "      <td>0.5067873303167420</td>\n",
+       "      <td>1001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041721</td>\n",
+       "      <td>160</td>\n",
+       "      <td>206</td>\n",
+       "      <td>103</td>\n",
+       "      <td>59.31553398058250</td>\n",
+       "      <td>0.64375</td>\n",
+       "      <td>4.694174757281550</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024050119</td>\n",
+       "      <td>160</td>\n",
+       "      <td>219</td>\n",
+       "      <td>110</td>\n",
+       "      <td>40.31506849315070</td>\n",
+       "      <td>0.6875</td>\n",
+       "      <td>4.63013698630137</td>\n",
+       "      <td>0.502283105022831</td>\n",
+       "      <td>1014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    channel group    DateHour Users Sessions Engaged sessions  \\\n",
+       "0          Direct  2024041723   188      233              115   \n",
+       "1  Organic Social  2024041718   187      256              125   \n",
+       "2  Organic Social  2024041720   175      221              112   \n",
+       "3  Organic Social  2024041721   160      206              103   \n",
+       "4  Organic Social  2024050119   160      219              110   \n",
+       "\n",
+       "  Average engagement time per session Engaged sessions per user  \\\n",
+       "0                   39.93991416309010        0.6117021276595740   \n",
+       "1                         32.16015625        0.6684491978609630   \n",
+       "2                  46.918552036199100                      0.64   \n",
+       "3                   59.31553398058250                   0.64375   \n",
+       "4                   40.31506849315070                    0.6875   \n",
+       "\n",
+       "  Events per session      Engagement rate Event count  \n",
+       "0  4.587982832618030  0.49356223175965700        1069  \n",
+       "1           4.078125           0.48828125        1044  \n",
+       "2  4.529411764705880   0.5067873303167420        1001  \n",
+       "3  4.694174757281550                  0.5         967  \n",
+       "4   4.63013698630137    0.502283105022831        1014  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns = df.iloc[0]\n",
     "df = df.drop(index=0).reset_index(drop=True)\n",
-    "df.columns=[\"channel group\",\"DateHour\",\"Users\",\"Sessions\tEngaged sessions\tAverage engagement time per session\tEngaged sessions per user\tEvents per session\tEngagement rate\tEvent count"
+    "df.columns=[\"channel group\",\"DateHour\",\"Users\",\"Sessions\",\"Engaged sessions\",\"Average engagement time per session\",\"Engaged sessions per user\",\"Events per session\",\"Engagement rate\",\"Event count\"]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c76185ad-a3e2-4362-be59-37ab99d7eab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[38;5;241m.\u001b[39minfo()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   }
  ],
