DateHour datatype changed

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "735a5fb5-2faf-42cd-ab41-ee8551ece789",
    "metadata": {},
    "outputs": [],
@@ -15,29 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "23783a47-9ea4-4853-b28d-5886faa17dc0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata-export (1).csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"data-export (1).csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "c2e896bf-37bd-4492-bfc2-4d6390bcd277",
    "metadata": {},
    "outputs": [
@@ -174,7 +162,7 @@
        "4            4.078125           0.48828125         1044  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "315491ed-5f17-4151-a413-8b66d725ab8d",
    "metadata": {},
    "outputs": [
@@ -226,6 +214,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Direct</td>\n",
+       "      <td>2024041623</td>\n",
+       "      <td>237</td>\n",
+       "      <td>300</td>\n",
+       "      <td>144</td>\n",
+       "      <td>47.526666666666700</td>\n",
+       "      <td>0.6075949367088610</td>\n",
+       "      <td>4.673333333333330</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024041719</td>\n",
+       "      <td>208</td>\n",
+       "      <td>267</td>\n",
+       "      <td>132</td>\n",
+       "      <td>32.09737827715360</td>\n",
+       "      <td>0.6346153846153850</td>\n",
+       "      <td>4.295880149812730</td>\n",
+       "      <td>0.4943820224719100</td>\n",
+       "      <td>1147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Direct</td>\n",
        "      <td>2024041723</td>\n",
        "      <td>188</td>\n",
        "      <td>233</td>\n",
@@ -237,7 +251,7 @@
        "      <td>1069</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>Organic Social</td>\n",
        "      <td>2024041718</td>\n",
        "      <td>187</td>\n",
@@ -250,7 +264,7 @@
        "      <td>1044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>Organic Social</td>\n",
        "      <td>2024041720</td>\n",
        "      <td>175</td>\n",
@@ -262,60 +276,34 @@
        "      <td>0.5067873303167420</td>\n",
        "      <td>1001</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>2024041721</td>\n",
-       "      <td>160</td>\n",
-       "      <td>206</td>\n",
-       "      <td>103</td>\n",
-       "      <td>59.31553398058250</td>\n",
-       "      <td>0.64375</td>\n",
-       "      <td>4.694174757281550</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>2024050119</td>\n",
-       "      <td>160</td>\n",
-       "      <td>219</td>\n",
-       "      <td>110</td>\n",
-       "      <td>40.31506849315070</td>\n",
-       "      <td>0.6875</td>\n",
-       "      <td>4.63013698630137</td>\n",
-       "      <td>0.502283105022831</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "    channel group    DateHour Users Sessions Engaged sessions  \\\n",
-       "0          Direct  2024041723   188      233              115   \n",
-       "1  Organic Social  2024041718   187      256              125   \n",
-       "2  Organic Social  2024041720   175      221              112   \n",
-       "3  Organic Social  2024041721   160      206              103   \n",
-       "4  Organic Social  2024050119   160      219              110   \n",
+       "0          Direct  2024041623   237      300              144   \n",
+       "1  Organic Social  2024041719   208      267              132   \n",
+       "2          Direct  2024041723   188      233              115   \n",
+       "3  Organic Social  2024041718   187      256              125   \n",
+       "4  Organic Social  2024041720   175      221              112   \n",
        "\n",
        "  Average engagement time per session Engaged sessions per user  \\\n",
-       "0                   39.93991416309010        0.6117021276595740   \n",
-       "1                         32.16015625        0.6684491978609630   \n",
-       "2                  46.918552036199100                      0.64   \n",
-       "3                   59.31553398058250                   0.64375   \n",
-       "4                   40.31506849315070                    0.6875   \n",
+       "0                  47.526666666666700        0.6075949367088610   \n",
+       "1                   32.09737827715360        0.6346153846153850   \n",
+       "2                   39.93991416309010        0.6117021276595740   \n",
+       "3                         32.16015625        0.6684491978609630   \n",
+       "4                  46.918552036199100                      0.64   \n",
        "\n",
        "  Events per session      Engagement rate Event count  \n",
-       "0  4.587982832618030  0.49356223175965700        1069  \n",
-       "1           4.078125           0.48828125        1044  \n",
-       "2  4.529411764705880   0.5067873303167420        1001  \n",
-       "3  4.694174757281550                  0.5         967  \n",
-       "4   4.63013698630137    0.502283105022831        1014  "
+       "0  4.673333333333330                 0.48        1402  \n",
+       "1  4.295880149812730   0.4943820224719100        1147  \n",
+       "2  4.587982832618030  0.49356223175965700        1069  \n",
+       "3           4.078125           0.48828125        1044  \n",
+       "4  4.529411764705880   0.5067873303167420        1001  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,24 +317,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c76185ad-a3e2-4362-be59-37ab99d7eab1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[38;5;241m.\u001b[39minfo()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3182 entries, 0 to 3181\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                               Non-Null Count  Dtype \n",
+      "---  ------                               --------------  ----- \n",
+      " 0   channel group                        3182 non-null   object\n",
+      " 1   DateHour                             3182 non-null   object\n",
+      " 2   Users                                3182 non-null   object\n",
+      " 3   Sessions                             3182 non-null   object\n",
+      " 4   Engaged sessions                     3182 non-null   object\n",
+      " 5   Average engagement time per session  3182 non-null   object\n",
+      " 6   Engaged sessions per user            3182 non-null   object\n",
+      " 7   Events per session                   3182 non-null   object\n",
+      " 8   Engagement rate                      3182 non-null   object\n",
+      " 9   Event count                          3182 non-null   object\n",
+      "dtypes: object(10)\n",
+      "memory usage: 248.7+ KB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5e0239-b9ab-4ad2-84dd-99f5373bde03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"DateHour\"] = pd.to_datetime(df[Date"
    ]
   }
  ],
