Dropped 1st two col to changed dtype of others

--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "23783a47-9ea4-4853-b28d-5886faa17dc0",
    "metadata": {},
    "outputs": [],
@@ -351,35 +351,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ac5e0239-b9ab-4ad2-84dd-99f5373bde03",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'DateHour'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'DateHour'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDateHour\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDateHour\u001b[39m\u001b[38;5;124m\"\u001b[39m] , \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH\u001b[39m\u001b[38;5;124m\"\u001b[39m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39mhead()\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'DateHour'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>channel group</th>\n",
+       "      <th>DateHour</th>\n",
+       "      <th>Users</th>\n",
+       "      <th>Sessions</th>\n",
+       "      <th>Engaged sessions</th>\n",
+       "      <th>Average engagement time per session</th>\n",
+       "      <th>Engaged sessions per user</th>\n",
+       "      <th>Events per session</th>\n",
+       "      <th>Engagement rate</th>\n",
+       "      <th>Event count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024-04-16 23:00:00</td>\n",
+       "      <td>237</td>\n",
+       "      <td>300</td>\n",
+       "      <td>144</td>\n",
+       "      <td>47.526666666666700</td>\n",
+       "      <td>0.6075949367088610</td>\n",
+       "      <td>4.673333333333330</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 19:00:00</td>\n",
+       "      <td>208</td>\n",
+       "      <td>267</td>\n",
+       "      <td>132</td>\n",
+       "      <td>32.09737827715360</td>\n",
+       "      <td>0.6346153846153850</td>\n",
+       "      <td>4.295880149812730</td>\n",
+       "      <td>0.4943820224719100</td>\n",
+       "      <td>1147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024-04-17 23:00:00</td>\n",
+       "      <td>188</td>\n",
+       "      <td>233</td>\n",
+       "      <td>115</td>\n",
+       "      <td>39.93991416309010</td>\n",
+       "      <td>0.6117021276595740</td>\n",
+       "      <td>4.587982832618030</td>\n",
+       "      <td>0.49356223175965700</td>\n",
+       "      <td>1069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 18:00:00</td>\n",
+       "      <td>187</td>\n",
+       "      <td>256</td>\n",
+       "      <td>125</td>\n",
+       "      <td>32.16015625</td>\n",
+       "      <td>0.6684491978609630</td>\n",
+       "      <td>4.078125</td>\n",
+       "      <td>0.48828125</td>\n",
+       "      <td>1044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 20:00:00</td>\n",
+       "      <td>175</td>\n",
+       "      <td>221</td>\n",
+       "      <td>112</td>\n",
+       "      <td>46.918552036199100</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>4.529411764705880</td>\n",
+       "      <td>0.5067873303167420</td>\n",
+       "      <td>1001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    channel group            DateHour Users Sessions Engaged sessions  \\\n",
+       "0          Direct 2024-04-16 23:00:00   237      300              144   \n",
+       "1  Organic Social 2024-04-17 19:00:00   208      267              132   \n",
+       "2          Direct 2024-04-17 23:00:00   188      233              115   \n",
+       "3  Organic Social 2024-04-17 18:00:00   187      256              125   \n",
+       "4  Organic Social 2024-04-17 20:00:00   175      221              112   \n",
+       "\n",
+       "  Average engagement time per session Engaged sessions per user  \\\n",
+       "0                  47.526666666666700        0.6075949367088610   \n",
+       "1                   32.09737827715360        0.6346153846153850   \n",
+       "2                   39.93991416309010        0.6117021276595740   \n",
+       "3                         32.16015625        0.6684491978609630   \n",
+       "4                  46.918552036199100                      0.64   \n",
+       "\n",
+       "  Events per session      Engagement rate Event count  \n",
+       "0  4.673333333333330                 0.48        1402  \n",
+       "1  4.295880149812730   0.4943820224719100        1147  \n",
+       "2  4.587982832618030  0.49356223175965700        1069  \n",
+       "3           4.078125           0.48828125        1044  \n",
+       "4  4.529411764705880   0.5067873303167420        1001  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"DateHour\"] = pd.to_datetime(df[\"DateHour\"] , format=\"%Y%m%d%H\", errors=\"coerce\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de0ce3a5-db4b-4f40-ad51-bb71fef10d2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_cols=df.columns.drop([\"ch"
    ]
   }
  ],
