--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -493,12 +493,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "de0ce3a5-db4b-4f40-ad51-bb71fef10d2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_cols=df.columns.drop([\"ch"
+    "numeric_cols=df.columns.drop([\"channel group\",\"DateHour\"])"
    ]
   }
  ],
