--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ac5e0239-b9ab-4ad2-84dd-99f5373bde03",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "4  4.529411764705880   0.5067873303167420        1001  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,13 +493,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "de0ce3a5-db4b-4f40-ad51-bb71fef10d2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_cols=df.columns.drop([\"channel group\",\"DateHour\"])"
+    "numeric_cols=df.columns.drop([\"channel group\",\"DateHour\"])\n",
+    "df[numeric_cols]=df[numeric_cols].apply(pd.to_numeric,errors=\"coerce\")\n",
+    "df[\"Hour\"]=df[\"DateHour\"].dt.hour"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "395c8a0c-af74-4fd0-b026-05135f3553ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
