--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -505,11 +505,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "395c8a0c-af74-4fd0-b026-05135f3553ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>channel group</th>\n",
+       "      <th>DateHour</th>\n",
+       "      <th>Users</th>\n",
+       "      <th>Sessions</th>\n",
+       "      <th>Engaged sessions</th>\n",
+       "      <th>Average engagement time per session</th>\n",
+       "      <th>Engaged sessions per user</th>\n",
+       "      <th>Events per session</th>\n",
+       "      <th>Engagement rate</th>\n",
+       "      <th>Event count</th>\n",
+       "      <th>Hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024-04-16 23:00:00</td>\n",
+       "      <td>237</td>\n",
+       "      <td>300</td>\n",
+       "      <td>144</td>\n",
+       "      <td>47.526667</td>\n",
+       "      <td>0.607595</td>\n",
+       "      <td>4.673333</td>\n",
+       "      <td>0.480000</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 19:00:00</td>\n",
+       "      <td>208</td>\n",
+       "      <td>267</td>\n",
+       "      <td>132</td>\n",
+       "      <td>32.097378</td>\n",
+       "      <td>0.634615</td>\n",
+       "      <td>4.295880</td>\n",
+       "      <td>0.494382</td>\n",
+       "      <td>1147</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Direct</td>\n",
+       "      <td>2024-04-17 23:00:00</td>\n",
+       "      <td>188</td>\n",
+       "      <td>233</td>\n",
+       "      <td>115</td>\n",
+       "      <td>39.939914</td>\n",
+       "      <td>0.611702</td>\n",
+       "      <td>4.587983</td>\n",
+       "      <td>0.493562</td>\n",
+       "      <td>1069</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 18:00:00</td>\n",
+       "      <td>187</td>\n",
+       "      <td>256</td>\n",
+       "      <td>125</td>\n",
+       "      <td>32.160156</td>\n",
+       "      <td>0.668449</td>\n",
+       "      <td>4.078125</td>\n",
+       "      <td>0.488281</td>\n",
+       "      <td>1044</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Organic Social</td>\n",
+       "      <td>2024-04-17 20:00:00</td>\n",
+       "      <td>175</td>\n",
+       "      <td>221</td>\n",
+       "      <td>112</td>\n",
+       "      <td>46.918552</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>4.529412</td>\n",
+       "      <td>0.506787</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    channel group            DateHour  Users  Sessions  Engaged sessions  \\\n",
+       "0          Direct 2024-04-16 23:00:00    237       300               144   \n",
+       "1  Organic Social 2024-04-17 19:00:00    208       267               132   \n",
+       "2          Direct 2024-04-17 23:00:00    188       233               115   \n",
+       "3  Organic Social 2024-04-17 18:00:00    187       256               125   \n",
+       "4  Organic Social 2024-04-17 20:00:00    175       221               112   \n",
+       "\n",
+       "   Average engagement time per session  Engaged sessions per user  \\\n",
+       "0                            47.526667                   0.607595   \n",
+       "1                            32.097378                   0.634615   \n",
+       "2                            39.939914                   0.611702   \n",
+       "3                            32.160156                   0.668449   \n",
+       "4                            46.918552                   0.640000   \n",
+       "\n",
+       "   Events per session  Engagement rate  Event count  Hour  \n",
+       "0            4.673333         0.480000         1402    23  \n",
+       "1            4.295880         0.494382         1147    19  \n",
+       "2            4.587983         0.493562         1069    23  \n",
+       "3            4.078125         0.488281         1044    18  \n",
+       "4            4.529412         0.506787         1001    20  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
