--- a/website performance analysis.ipynb
+++ b/website performance analysis.ipynb
@@ -649,6 +649,41 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ee95d723-8908-438b-a396-4f7c845a68cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3182 entries, 0 to 3181\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                               Non-Null Count  Dtype         \n",
+      "---  ------                               --------------  -----         \n",
+      " 0   channel group                        3182 non-null   object        \n",
+      " 1   DateHour                             3182 non-null   datetime64[ns]\n",
+      " 2   Users                                3182 non-null   int64         \n",
+      " 3   Sessions                             3182 non-null   int64         \n",
+      " 4   Engaged sessions                     3182 non-null   int64         \n",
+      " 5   Average engagement time per session  3182 non-null   float64       \n",
+      " 6   Engaged sessions per user            3182 non-null   float64       \n",
+      " 7   Events per session                   3182 non-null   float64       \n",
+      " 8   Engagement rate                      3182 non-null   float64       \n",
+      " 9   Event count                          3182 non-null   int64         \n",
+      " 10  Hour                                 3182 non-null   int32         \n",
+      "dtypes: datetime64[ns](1), float64(4), int32(1), int64(4), object(1)\n",
+      "memory usage: 261.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
